--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,60 @@
-pandas>=2.2.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.1
+aiosignal==1.4.0
+alpaca-trade-api==3.2.0
+altair==5.5.0
+attrs==25.4.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+deprecation==2.1.0
+frozenlist==1.8.0
+gitdb==4.0.12
+GitPython==3.1.45
+idna==3.11
+importlib_metadata==7.2.1
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+msgpack==1.0.3
+multidict==6.7.0
+narwhals==2.9.0
+numpy==1.26.4
+packaging==23.2
+pandas==2.3.3
+pillow==10.4.0
+propcache==0.4.1
+protobuf==4.25.8
+pyarrow==21.0.0
+pydeck==0.9.1
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+PyYAML==6.0.1
+referencing==0.37.0
+requests==2.32.5
+rich==13.9.4
+rpds-py==0.28.0
+six==1.17.0
+smmap==5.0.2
 streamlit==1.30.0
+tenacity==8.5.0
+toml==0.10.2
+tornado==6.5.2
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==1.26.20
+validators==0.35.0
+watchdog==6.0.0
+websocket-client==1.9.0
+websockets==10.4
+yarl==1.22.0
+zipp==3.23.0
