--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,8 @@ rich==13.9.4
 rpds-py==0.28.0
 six==1.17.0
 smmap==5.0.2
-streamlit==1.30.0
+fastapi>=0.95.0
+uvicorn[standard]>=0.20.0
 tenacity==8.5.0
 toml==0.10.2
 tornado==6.5.2
